src/components/Resume.module.scss
@import 'styles/_common';

.Resume {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  .card {
    width: 85%;
    height: 85%;
    border: $border-primary;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    overflow: auto;
    position: relative;

    .title {
      padding: 1em;
      background-color: $primary-darker;
      color: $primary-invert;
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
      font-family: var(--sans-font);
      a,
      a:visited {
        color: $primary-invert;
      }
    }
    .body {
      background-color: $primary-lighter;
      flex-grow: 2;
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
    }
  }
}

